--- a/reg.html
+++ b/reg.html
@@ -36,7 +36,7 @@
         </form>
         <button type="submit" class="reg-button">Registrarte</button>
         <div class="reg-footer">
-            <p>¿Ya tienes una cuenta? <a href="/index.html">Inicia Sesión</a></p>
+            <p>¿Ya tienes una cuenta? <a href="index.html">Inicia Sesión</a></p>
         </div>
     </div>
 </body>
