--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <button type="submit" class="login-button">Iniciar Sesión</button>
                 <div class="login-footer">
-                    <p>¿No tienes cuenta? <a href="reg.html">Regístrate</a></p>
+                    <p>¿No tienes cuenta? <a href="./reg.html">Regístrate</a></p>
                 </div>
             </form>
         </div>
