--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <button type="submit" class="login-button">Iniciar Sesión</button>
         <div class="login-footer">
-          <p>¿No tienes cuenta? <a href="./reg.html">Regístrate</a></p>
+          <p>¿No tienes cuenta? <a href="./sign-up/reg.html">Regístrate</a></p>
         </div>
       </form>
     </div>
